ImpressCMS ChangeLog

=== ImpressCMS 1.2 Final ===
Release date: 13 Dec 2009
Revision:
DB Version: 38
Build Version: 32

=== ImpressCMS 1.2 RC2 ===
Release date: 6 Dec 2009
Revision: 9635
DB Version: 38
Build Version: 31

* #856: image manager allows illegal characters in the folder name of a new category (skenow)
* #843: Create a language constant for the update process (about permission for Plugins and Preload folders) (malanciault)
* #594: Problem with short URLs on TinyMCE (m0nty)
* #45: Debugger stops icmsfeed (malanciault)
* #623: Problems with tinyMCE : adding linebreaks again and again (malanciault)
* #624: TinyMCE editor, add text, linebreaks, etc, switch back to dhtmleditor: the input filed is full of html-tags (malanciault)
* #851: Wrong footer in ACP Themes (phoenyx)
* #838: Imagemanager: problems in update sites when there are images categories (realtherplima/skenow)
* #773: Installer images + text need updating (malanciault)
* #7: Built in Scheduled Task (cron tab) (MekDrop)
* #590: global rating tool (stranger)
* #812: Mangled e-mail in welcome message (malanciault)
* #848: Symlink for blocksadmin is created with the wrong language constant (skenow)
* #845: installer writes not language values correct (phoenyx)
* #834: Installation images and document need updating (davidimpress)
* #844: symlink to content not available (realtherplima)
* #829: Installer: Spanish language link points to an old package (debianus)
* #827: Issues Discovered on RC Release Day (phoenyx)
* #837: Fix two language constants for HTMLPurifier (m0nty)
* #839: incorrect language constants for Purifier (m0nty)
* #835: Installation images and document need updating (malanciault)
* #833: SmartObject refferenes (skenow)
* #830: Protector Instructions (mrtheme)
* #828: Problem with Trunk rev 9567 (phoenyx)


=== ImpressCMS 1.2 RC 1 ===
Release date: 20 Nov 2009
Revision: 9581

* #48: unserialize() [function.unserialize]: Error (Phoenyx/skenow/Stranger)